--- a/class-sched.html
+++ b/class-sched.html
@@ -3,20 +3,27 @@
 <head>
     <title>Jasmine Wang~Class Schedule</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="class-body">
     <header> 
         <img class="header_img" src="images/me_small.jpg">
         <h1>Jasmine Wang</h1>
 
-        <div class="navbar">
-            <ul>
-                <li><a href="main.html">About Me</a></li>
-                <li><a href="class-sched.html">Class Schedule</a></li>
-                <li><a href="interests.html">Interests</a></li>
-            </ul>
-        </div>
+        <nav class="nav nav-pills flex-column flex-sm-row">
+          <a class="flex-sm-fill text-sm-center nav-link" href="main.html">About Me</a>
+          <a class="flex-sm-fill text-sm-center nav-link active" href="class-sched.html">Class Schedule</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="interests.html">Interests</a>
+        </nav>
+
     </header>
 
     <div class="class-schedule">
