--- a/main.html
+++ b/main.html
@@ -13,25 +13,46 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="homebody">
     <header> 
+        <!-- <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Library</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Data</li>
+          </ol>
+        </nav> -->
+
         <img class="header_img" src="images/me_small.jpg">
         <h1>Jasmine Wang</h1>
-        <div class="navbar">
-            <ul>
-                <li><a href="main.html">About Me</a></li>
-                <li><a href="class-sched.html">Class Schedule</a></li>
-                <li><a href="interests.html">Interests</a></li>
-            </ul>
-        </div>
+
+        <nav class="nav nav-pills flex-column flex-sm-row">
+          <a class="flex-sm-fill text-sm-center nav-link active" href="main.html">About Me</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="class-sched.html">Class Schedule</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="interests.html">Interests</a>
+        </nav>
+
     </header>
-    <div class="pt_bio">
+    <!-- <div class="pt_bio">
         <img class="bio_img" src="images/resize_me.jpg" alt="Hi there!">
         <p class="bio"> Hi there! My name is Jasmine Wang.<br /><br />
         I'm a rising Junior at the University of Michigan majoring in Computer Science and Cognitive Science. I'm currently interested in mobile application development and web development. There's so much that you can do on both platforms!<br /><br />
         Aside from my love for tech, I love to explore. My dream is to be able to travel the world in the future so that I can go to many different countries and experience their food and culture.<br /><br />
         Photography is also something I'm interested in. Being able to capture a moment in time and revisit or even relive it later on through photos is so meaningful. In particular, I really like landscape photography. I'm always surprised and inspired by how pretty nature is.
         </p>
+    </div> -->
+
+    <div class="jumbotron">
+      <h1 class="display-4">Hi there! My name is Jasmine Wang.</h1>
+      <p class="lead">
+        I'm a rising Junior at the University of Michigan majoring in Computer Science and Cognitive Science. I'm currently interested in mobile application development and web development. There's so much that you can do on both platforms!<br /><br />
+        Aside from my love for tech, I love to explore. My dream is to be able to travel the world in the future so that I can go to many different countries and experience their food and culture.<br /><br />
+        Photography is also something I'm interested in. Being able to capture a moment in time and revisit or even relive it later on through photos is so meaningful. In particular, I really like landscape photography. I'm always surprised and inspired by how pretty nature is.</p>
+      <hr class="my-4">
+      <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p> -->
+      <div class="button">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Thanks for visiting!</a>
+      </div>
     </div>
 </body>
 
