--- a/class-sched.html
+++ b/class-sched.html
@@ -29,49 +29,53 @@
     <div class="class-schedule">
     <h2>Class Schedule for Winter 2020 Semester</h2>
 
-    <table>
-        <tr class="row1"> 
-            <td><b>Monday</b></td>
-            <td><b>Tuesday</b></td>
-            <td><b>Wednesday</b></td>
-            <td><b>Thursday</b></td>
-            <td><b>Friday</b></td>
+    <table class="table">
+      <thead class="thead-dark">
+        <tr>
+            <th scope="col">Monday</th>
+            <th scope="col">Tuesday</th>
+            <th scope="col">Wednesday</th>
+            <th scope="col">Thursday</th>
+            <th scope="col">Friday</th>
         </tr>
-        <tr class="row2">
+      </thead>
+      <tbody>
+        <tr>
             <td></td>
             <td>STATS 250<br />8:30AM-10AM</td>
             <td></td>
             <td>STATS 250<br />8:30AM-10AM</td>
             <td></td>
         </tr>
-        <tr class="row3">
+        <tr>
             <td>ASIANLAN 202<br />10AM-11AM</td>
             <td>ASIANLAN 202<br />10AM-11AM</td>
             <td>ASIANLAN 202<br />10AM-11AM</td>
             <td>ASIANLAN 202<br />10AM-11AM</td>
             <td>ASIANLAN 202<br />10AM-11AM</td>
         </tr>
-        <tr class="row4">
+        <tr>
             <td>STATS 250<br />11:30AM-1PM</td>
             <td>COGSCI 200<br />11:30AM-1PM</td>
             <td></td>
             <td>COGSCI 200<br />11:30AM-1PM</td>
             <td>COGSCI 200<br />11AM-12PM</td>
         </tr>
-        <tr class="row5">
+        <tr>
             <td></td>
             <td></td>
             <td></td>
             <td></td>
             <td>EECS 370<br />1:30PM-2:30PM</td>
         </tr>
-        <tr class="row6">
+        <tr>
             <td>DANCE 100<br />4PM-5PM</td>
             <td>EECS 370<br />3PM-4:30PM</td>
             <td>DANCE 100<br />4PM-5PM</td>
             <td>EECS 370<br />3PM-4:30PM</td>
             <td></td>
         </tr>
+      </tbody>
     </table>
 
     <p>I had so much trouble waking up at 8 in the morning...</p>
