fixed jumbotron button

--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
       <hr class="my-4">
       <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p> -->
       <div class="button">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Thanks for visiting!</a>
+        <a class="btn btn-lg" href="#" role="button">Thanks for visiting!</a>
       </div>
     </div>
 </body>
